--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 ﻿{
     "trailingComma": "es5",
     "tabWidth": 4,
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
     "plugins": [
         "prettier-plugin-tailwindcss"
