--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/lodash": "^4.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "d": "^1.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.367.0",
     "next": "14.1.4",
     "prisma": "^5.12.1",
@@ -29,6 +31,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "unsplash-js": "^7.0.19",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
